# GroupingObjects

./: .gitignore  CMakeLists.txt  README.md
include/: GroupingOptions.h  Object.h  ReadWrite.h
resources/: data.txt
src/: CMakeLists.txt  GroupingOptions.cpp  Object.cpp  ReadWrite.cpp  main.cpp
